Jörgs Lösung für Euler 87 in Rust

--- a/2017-03-28/Makefile
+++ b/2017-03-28/Makefile
@@ -8,6 +8,9 @@ LDFLAGS=-lm
 
 .PHONY: all
 
-all: jo-so_euler87
+all: jo-so_euler87 jo-so_euler87_rust
 
 jo-so_euler87:
+
+jo-so_euler87_rust: jo-so_euler87.rs
+	rustc -O -g -o $@ $<
